@@ -202,6 +202,7 @@ ban-relative-imports = "all"
 
 [tool.mypy]
 files = [ "normcap/**/*.py", "tests/**/*.py", "bundle/**/*.py" ]
+exclude_gitignore = true
 follow_imports = "skip"
 ignore_missing_imports = true
 
